--- a/index.html
+++ b/index.html
@@ -1,208 +1,176 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI PDF Summarizer — Final Fixed</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <style>
-    :root{
-      --accent1:#8b5cf6; --accent2:#06b6d4; --muted:#9fb2d9;
-    }
-    body{
-      margin:0;font-family:"Poppins",sans-serif;color:#eef2ff;
-      background:linear-gradient(135deg,#111827,#0f172a,#1e3a8a);
-      background-size:400% 400%;animation:bgShift 20s ease infinite;
-      padding:30px;text-align:center;
-    }
-    @keyframes bgShift{
-      0%{background-position:0% 50%}
-      50%{background-position:100% 50%}
-      100%{background-position:0% 50%}
-    }
-    h1{font-size:2.2em;background:linear-gradient(90deg,var(--accent1),var(--accent2));
-      -webkit-background-clip:text;-webkit-text-fill-color:transparent;text-shadow:0 0 20px rgba(139,92,246,0.4)}
-    .card{
-      background:rgba(255,255,255,0.08);backdrop-filter:blur(10px);
-      border-radius:16px;padding:20px;margin:20px auto;
-      box-shadow:0 8px 32px rgba(0,0,0,0.3);max-width:800px;text-align:left;
-    }
-    button{
-      background:linear-gradient(90deg,var(--accent1),var(--accent2));border:none;
-      color:white;font-weight:bold;border-radius:10px;padding:10px 18px;margin:6px;
-      cursor:pointer;transition:.3s;
-    }
-    button:hover{transform:scale(1.05);box-shadow:0 0 12px rgba(139,92,246,0.6)}
-    input[type=file]{background:#fff;color:#111;border-radius:8px;padding:6px;margin-top:10px}
-    .progress{width:100%;background:rgba(255,255,255,0.15);height:8px;border-radius:8px;margin-top:10px;overflow:hidden;display:none}
-    .progress div{height:8px;width:0%;background:linear-gradient(90deg,var(--accent1),var(--accent2));transition:width .3s}
-    .result{margin-top:10px;padding:12px;background:rgba(255,255,255,0.1);
-      border-radius:10px;white-space:pre-wrap;min-height:120px;color:#e2e8f0}
-    .orb{position:fixed;bottom:40px;right:40px;width:60px;height:60px;border-radius:50%;
-      background:radial-gradient(circle at 30% 30%,#8b5cf6,#4c1d95);
-      box-shadow:0 0 50px #8b5cf6;display:flex;align-items:center;justify-content:center;
-      color:#fff;font-weight:bold;animation:float 3s ease-in-out infinite;}
-    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-10px)}}
-    footer{color:#9ca3af;font-size:13px;margin-top:20px}
-    .history-item{display:flex;justify-content:space-between;border-bottom:1px solid rgba(255,255,255,0.1);padding:6px 0}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>🎤 AI PDF Summarizer Ultimate Voice Edition</title>
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+body {
+  margin:0;font-family:'Poppins',sans-serif;
+  background:linear-gradient(120deg,#0f172a,#1e293b,#3b0764);
+  background-size:300% 300%;animation:bgShift 10s ease infinite;
+  color:#e2e8f0;overflow-x:hidden;
+}
+@keyframes bgShift {0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
+h1{text-align:center;font-size:2rem;margin-top:25px;
+background:linear-gradient(90deg,#06b6d4,#a855f7);
+-webkit-background-clip:text;-webkit-text-fill-color:transparent;
+text-shadow:0 0 20px #06b6d4;}
+.container{max-width:900px;margin:30px auto;padding:25px;
+background:rgba(255,255,255,0.06);border-radius:20px;
+box-shadow:0 0 25px rgba(168,85,247,0.3);}
+.upload-box{border:2px dashed rgba(255,255,255,0.2);padding:40px;
+border-radius:15px;text-align:center;transition:.3s;}
+.upload-box:hover{background:rgba(255,255,255,0.07);transform:scale(1.02);}
+input[type=file]{display:none;}
+button{background:linear-gradient(90deg,#7c3aed,#06b6d4);
+border:none;color:white;font-weight:600;border-radius:8px;
+padding:10px 18px;margin:6px;cursor:pointer;transition:.3s;}
+button:hover{transform:scale(1.05);box-shadow:0 0 10px #06b6d4;}
+.result{margin-top:20px;padding:15px;border-radius:12px;
+background:rgba(255,255,255,0.08);white-space:pre-wrap;
+line-height:1.6;color:#f1f5f9;min-height:150px;}
+.orb{width:90px;height:90px;border-radius:50%;
+background:radial-gradient(circle at 30% 30%,#06b6d4,#a855f7);
+animation:float 3s ease-in-out infinite;box-shadow:0 0 25px #06b6d4;
+display:flex;align-items:center;justify-content:center;
+font-weight:700;font-size:18px;color:white;margin:20px auto;cursor:pointer;}
+@keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-10px)}}
+#progressContainer{width:100%;height:8px;margin-top:10px;
+border-radius:8px;background:rgba(255,255,255,0.1);
+overflow:hidden;display:none;}
+#progressBar{height:100%;width:0;background:linear-gradient(90deg,#06b6d4,#a855f7);
+animation:progressGlow 2s linear infinite;}
+@keyframes progressGlow{0%{background-position:0% 50%}100%{background-position:200% 50%}}
+.theme-toggle{position:fixed;top:20px;right:25px;font-size:22px;cursor:pointer;color:#a5f3fc;}
+.stats{margin-top:15px;text-align:center;font-size:14px;color:#93c5fd;}
+.voice-indicator{color:#facc15;text-align:center;margin-top:8px;font-weight:500;}
+</style>
 </head>
 <body>
-  <h1>📄 AI PDF Summarizer</h1>
-  <p>Upload your PDF & let AI summarize it in seconds</p>
 
-  <div class="card">
-    <input type="file" id="pdfFile" accept="application/pdf" />
-    <button id="summarizeBtn">⚡ Summarize</button>
-    <div class="progress" id="progress"><div></div></div>
-  </div>
+<h1>🎤 AI PDF Summarizer Ultimate</h1>
+<div class="theme-toggle" id="themeToggle">🌙</div>
 
-  <div class="card">
-    <h2>🧠 Summary</h2>
-    <div id="result" class="result">No summary yet.</div>
-    <div>
-      <button id="shortBtn">✂️ Shorten</button>
-      <button id="expandBtn">🔍 Expand</button>
-      <button id="voiceBtn">🗣 Speak</button>
-      <button id="stopVoiceBtn">🛑 Stop</button>
-      <button id="copyBtn">📋 Copy</button>
-      <button id="downloadBtn">💾 Download</button>
-    </div>
-  </div>
-
-  <div class="card">
-    <h2>📜 History</h2>
-    <div id="historyList"></div>
-  </div>
-
+<div class="container">
   <div class="orb" id="orb">AI</div>
 
-  <footer>© 2025 AI Summarizer — Polished Version</footer>
+  <div class="upload-box" id="uploadBox">
+    📄 Click or drag a PDF here
+    <input type="file" id="fileInput" accept="application/pdf">
+  </div>
 
-  <script>
-    const BACKEND_URL = "https://ai-backend-9oul.onrender.com";
-    const fileInput = document.getElementById("pdfFile");
-    const resultDiv = document.getElementById("result");
-    const progressBar = document.getElementById("progress");
-    const progressInner = progressBar.querySelector("div");
-    const synth = window.speechSynthesis;
-    let currentSummary = "";
-    let speaking = false;
+  <div id="progressContainer"><div id="progressBar"></div></div>
 
-    const orb = document.getElementById("orb");
-    function orbSpeak(msg){
-      orb.textContent = "💬";
-      setTimeout(()=>orb.textContent="AI",1200);
-      console.log("[ORB]",msg);
-    }
+  <div style="text-align:center;margin-top:15px;">
+    <button id="summBtn">Summarize</button>
+    <button id="shortBtn">Shorten</button>
+    <button id="expandBtn">Expand</button>
+    <button id="rephraseBtn">Rephrase</button>
+    <button id="speakBtn">Speak</button>
+    <button id="copyBtn">Copy</button>
+    <button id="pdfBtn">Export PDF</button>
+    <button id="tipBtn">AI Tip</button>
+    <button id="clearBtn">Clear</button>
+    <button id="voiceBtn">🎤 Voice Mode</button>
+  </div>
 
-    document.getElementById("summarizeBtn").addEventListener("click", async () => {
-      const file = fileInput.files[0];
-      if (!file) return alert("Please select a PDF file first!");
-      orbSpeak("Analyzing...");
-      const formData = new FormData();
-      formData.append("file", file);
+  <div id="status" style="text-align:center;margin-top:10px;color:#38bdf8;"></div>
+  <div id="voiceIndicator" class="voice-indicator"></div>
+  <div id="result" class="result">🪄 Waiting for your command...</div>
+  <div id="stats" class="stats"></div>
+</div>
 
-      progressBar.style.display="block";
-      progressInner.style.width="0%";
-      let width=0;
-      const interval=setInterval(()=>{
-        if(width<90){width+=10;progressInner.style.width=width+"%";}
-      },300);
+<script>
+const BACKEND_URL="https://ai-backend-9oul.onrender.com";
+let lastSummary="";
+const orb=document.getElementById("orb"),fileInput=document.getElementById("fileInput"),
+result=document.getElementById("result"),statusDiv=document.getElementById("status"),
+progressContainer=document.getElementById("progressContainer"),
+progressBar=document.getElementById("progressBar"),voiceIndicator=document.getElementById("voiceIndicator");
 
-      try{
-        const res = await fetch(`${BACKEND_URL}/summarize`,{method:"POST",body:formData});
-        clearInterval(interval);
-        progressInner.style.width="100%";
-        setTimeout(()=>progressBar.style.display="none",400);
-        const data = await res.json();
-        currentSummary = data.summary || "No summary generated.";
-        resultDiv.innerText = "";
-        typeWriter(currentSummary);
-        orbSpeak("Summary ready!");
-        addHistory(file.name, currentSummary);
-      }catch(err){
-        clearInterval(interval);
-        alert("Error: "+err.message);
-        progressBar.style.display="none";
-      }
-    });
+document.getElementById("uploadBox").onclick=()=>fileInput.click();
+document.getElementById("summBtn").onclick=()=>summarize();
+document.getElementById("shortBtn").onclick=()=>shorten();
+document.getElementById("expandBtn").onclick=()=>expand();
+document.getElementById("rephraseBtn").onclick=()=>rephrase();
+document.getElementById("speakBtn").onclick=()=>speak();
+document.getElementById("copyBtn").onclick=()=>copyText();
+document.getElementById("pdfBtn").onclick=()=>exportPDF();
+document.getElementById("tipBtn").onclick=()=>showTip();
+document.getElementById("clearBtn").onclick=()=>clearAll();
+document.getElementById("themeToggle").onclick=()=>toggleTheme();
+document.getElementById("voiceBtn").onclick=()=>startVoiceMode();
 
-    function typeWriter(text,i=0){
-      if(i<text.length){
-        resultDiv.innerText += text.charAt(i);
-        setTimeout(()=>typeWriter(text,i+1),8);
-      }
-    }
+async function summarize(){
+  const f=fileInput.files[0];
+  if(!f)return alert("Select a PDF first!");
+  orbTalk("Summarizing...");
+  startProgress();
+  result.textContent="⏳ Summarizing document...";
+  try{
+    const fd=new FormData();
+    fd.append("file",f);
+    const res=await fetch(`${BACKEND_URL}/summarize`,{method:"POST",body:fd});
+    const data=await res.json();
+    stopProgress();
+    if(data.error)return result.textContent="⚠️ "+data.error;
+    lastSummary=data.summary||"No summary generated.";
+    typeWriter(result,lastSummary);
+  }catch(e){stopProgress();result.textContent="❌ Failed: "+e.message;}
+}
 
-    // Shorten / Expand
-    document.getElementById("shortBtn").onclick=()=>{
-      if(!currentSummary)return;
-      const sents=currentSummary.split(/[.?!]/).filter(x=>x.trim().length>5);
-      const short=sents.slice(0,Math.max(2,Math.ceil(sents.length/3))).join(". ")+".";
-      resultDiv.innerText=short;
-    };
-    document.getElementById("expandBtn").onclick=()=>{
-      if(!currentSummary)return;
-      resultDiv.innerText=currentSummary+"\n\nIn simpler terms: "+currentSummary;
-    };
+function shorten(){if(!lastSummary)return alert("No summary yet!");
+result.textContent=lastSummary.split(". ").slice(0,3).join(". ")+".";
+}
+function expand(){if(!lastSummary)return alert("No summary yet!");
+result.textContent=lastSummary+" Additionally, it elaborates for clarity.";
+}
+function rephrase(){if(!lastSummary)return alert("No summary yet!");
+result.textContent=lastSummary.replace(/\b(important|difficult)\b/gi,"key")+" (Simplified)";
+}
+function speak(){if(!lastSummary)return alert("Nothing to read!");
+const sp=new SpeechSynthesisUtterance(result.textContent);speechSynthesis.speak(sp);}
+function copyText(){navigator.clipboard.writeText(result.textContent);alert("Copied!");}
+function exportPDF(){const blob=new Blob([result.textContent],{type:"text/plain"});
+const a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="AI_Summary.txt";a.click();}
+function showTip(){const tips=[
+"💡 Use AI to save time before exams!","🎧 Speak summaries aloud while studying.",
+"🧠 Use Rephrase for easier language!","🎨 Try light mode for printing.",
+"✨ Combine Shorten + Expand for layers!"
+];result.textContent=tips[Math.floor(Math.random()*tips.length)];}
+function clearAll(){result.textContent="🪄 Waiting for your command...";statusDiv.textContent="";}
+function typeWriter(el,text,i=0){el.textContent="";if(i<text.length){el.textContent+=text.charAt(i);setTimeout(()=>typeWriter(el,text,i+1),8);}else el.textContent=text;}
+function startProgress(){progressContainer.style.display="block";let w=0;const i=setInterval(()=>{w+=4;if(w>95)clearInterval(i);progressBar.style.width=w+"%";},200);}
+function stopProgress(){progressBar.style.width="100%";setTimeout(()=>progressContainer.style.display="none",800);}
+function toggleTheme(){document.body.classList.toggle("light");
+if(document.body.classList.contains("light")){document.body.style.background="#f8fafc";document.body.style.color="#111";}
+else{document.body.style.background="";document.body.style.color="";}}
+function orbTalk(msg){orb.textContent="💬";statusDiv.textContent=msg;setTimeout(()=>{orb.textContent="AI";statusDiv.textContent="";},1500);}
 
-    // Voice
-    document.getElementById("voiceBtn").onclick=()=>{
-      if(!currentSummary)return;
-      if(speaking)synth.cancel();
-      const utter=new SpeechSynthesisUtterance(currentSummary);
-      utter.rate=1; utter.pitch=1;
-      speaking=true; utter.onend=()=>speaking=false;
-      synth.speak(utter);
-    };
-    document.getElementById("stopVoiceBtn").onclick=()=>{
-      synth.cancel(); speaking=false;
-    };
-
-    // Copy / Download
-    document.getElementById("copyBtn").onclick=()=>{
-      if(!currentSummary)return;
-      navigator.clipboard.writeText(resultDiv.innerText);
-      orbSpeak("Copied!");
-    };
-    document.getElementById("downloadBtn").onclick=()=>{
-      if(!currentSummary)return;
-      const blob=new Blob([resultDiv.innerText],{type:"text/plain"});
-      const a=document.createElement("a");
-      a.href=URL.createObjectURL(blob);
-      a.download="summary.txt";
-      a.click();
-    };
-
-    // History system
-    function addHistory(name,text){
-      const history = JSON.parse(localStorage.getItem("pdfHistory")||"[]");
-      history.unshift({name,time:new Date().toLocaleString(),text});
-      localStorage.setItem("pdfHistory",JSON.stringify(history));
-      renderHistory();
-    }
-    function renderHistory(){
-      const history = JSON.parse(localStorage.getItem("pdfHistory")||"[]");
-      const div=document.getElementById("historyList");
-      div.innerHTML="";
-      if(history.length===0){div.innerHTML="<em>No summaries yet.</em>";return;}
-      history.forEach(h=>{
-        const item=document.createElement("div");
-        item.className="history-item";
-        const info=document.createElement("div");
-        info.innerHTML=`<strong>${h.name}</strong> - <small>${h.time}</small>`;
-        const btn=document.createElement("button");
-        btn.textContent="View";
-        btn.onclick=()=>{
-          resultDiv.innerText=h.text||"";
-          currentSummary=h.text||"";
-        };
-        item.appendChild(info);item.appendChild(btn);
-        div.appendChild(item);
-      });
-    }
-    renderHistory();
-  </script>
+/* 🎤 Voice Command Mode */
+function startVoiceMode(){
+  if(!('webkitSpeechRecognition' in window))return alert("Voice recognition not supported!");
+  const recognition=new webkitSpeechRecognition();
+  recognition.lang="en-US";recognition.interimResults=false;recognition.maxAlternatives=1;
+  recognition.start();
+  orbTalk("Listening...");
+  voiceIndicator.textContent="🎧 Listening... Speak now";
+  recognition.onresult=function(e){
+    const cmd=e.results[0][0].transcript.toLowerCase();
+    voiceIndicator.textContent="🗣️ Heard: "+cmd;
+    if(cmd.includes("summarize"))summarize();
+    else if(cmd.includes("shorten"))shorten();
+    else if(cmd.includes("expand"))expand();
+    else if(cmd.includes("rephrase"))rephrase();
+    else if(cmd.includes("read")||cmd.includes("speak"))speak();
+    else if(cmd.includes("clear"))clearAll();
+    else result.textContent="🤔 Unknown command: "+cmd;
+  };
+  recognition.onend=()=>{voiceIndicator.textContent="🎤 Voice mode ended.";}
+}
+</script>
 </body>
 </html>
