--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <footer>© 2025 AI Summarizer — Polished Version</footer>
 
   <script>
-    const BACKEND_URL = "https://ai-backend-9oul.onrender.com";
+    const BACKEND_URL = "https://ai-backend-1-w89u.onrender.com";
     const fileInput = document.getElementById("pdfFile");
     const resultDiv = document.getElementById("result");
     const progressBar = document.getElementById("progress");
